index.htmlを更新してJavaScriptを読み込み (#1)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
         .feature-list li {
             margin-bottom: 10px;
         }
+        .button-container button:hover {
+            opacity: 0.9;
+        }
     </style>
+    <!-- JavaScriptファイルの読み込み -->
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="container">
@@ -36,6 +41,7 @@
         <ul class="feature-list">
             <li>ファイル作成とコミット</li>
             <li>イシュー管理</li>
+            <li>JavaScriptによるインタラクティブ機能</li>
             <li>その他のGitHub機能</li>
         </ul>
         
